Code push on 02092019

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,55 @@
-<!-- FOOTER -->
+<!-- FOOTER
 <footer class="container">
+  <div class="row">
+    <div class="col-sm-1 col-md-1 col-lg-4 col-xl-4 col-1">
+      CORPORATE
+    </div>
+    <div class="col-sm-1 col-md-1 col-lg-4 col-xl-4 col-1">
+        SERVICES
+      </div>
+      <div class="col-sm-1 col-md-1 col-lg-4 col-xl-4 col-1">
+          REACH US
+        </div>
+        <div class="col-sm-1 col-md-1 col-lg-4 col-xl-4 col-1">
+            FOLLOW US ON
+          </div>
+  </div>
+
+  <footer class="container">
+      <div class="row">
+        <div class="col-sm-1 col-md-1 col-lg-4 col-xl-4 col-1">
+            <a>Home</a>
+            <a>About Us</a>a>
+            <a>Services</a>
+            <a>Contact Us</a>
+            <a>Trainings</a>
+          
+        </div>
+        <div class="col-sm-1 col-md-1 col-lg-4 col-xl-4 col-1">
+       <a> Software Development</a>
+       <a> Mobile Application</a>
+       <a> Product Development</a>
+       <a> IT Consulting</a>
+       <a> Software Testing</a>
+       <a> Corporate Training</a>
+          </div>
+          <div class="col-sm-1 col-md-1 col-lg-4 col-xl-4 col-1">
+              <pre>Tweak Talent Technologies LLP.
+              PlotNo 1, 1st Floor, 
+              Ratan Deep Complex, 
+              Allwyn Colony, Miyapur, KKE
+              Pin: 500 049 Hyderabad, 
+              Telangana, India</pre>
+            
+            </div>
+            </div>
+            <div class="col-sm-1 col-md-1 col-lg-4 col-xl-4 col-1">
+                <a>Facebook</a>>
+                <a>LinkedIn</a>>
+                <a>Twitter</a>>
+                <a>Skype</a>>
+              </div>
+      </div>
     <p class="float-right"><a href="#">Back to top</a></p>
     <p>© 2017-2018 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
-  </footer>
+  </footer> -->
