--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="navbar-collapse collapse" id="navbarCollapse" style="">
+      <div class="navbar-collapse collapse" id="navbarCollapse" >
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -18,15 +18,11 @@
               </div>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">What we do</a>
-          </li>
+         
           <li class="nav-item">
               <a class="nav-link dropdown" href="#">Trainings
                   <div class="dropdown-content">
-                      <!-- <div *ngFor="let course of trainings; let idx=index">
-                      <a routerLink="/trainings/idx"> {{course}}</a> 
-                       </div> -->
+                     
                        <a routerLink='/trainings/datascience'>Data Science Courses </a>
                        <a routerLink='/trainings/bigdata'>Big Data Courses</a>
                        
