--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,57 +1,29 @@
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
+<div class="carousel slide">
     <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1" class=""></li>
-      <li data-target="#myCarousel" data-slide-to="2" class=""></li>
+      <ng-container *ngFor="let img of ImagesList;let idx1=index">
+          <li [class.active]="currentIndex==idx1" (click)="Load(currentIndex)"></li>
+      </ng-container>
     </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active carousel-item-left">
-        <my-img></my-img>
-        <!--<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect fill="#777" width="100%" height="100%"></rect></svg>-->
-        <div class="container">
-          <div class="carousel-caption text-left">
-            <h1>Angular 7</h1>
-            <p>Learn one way to build applications with Angular and reuse your code and abilities to build apps for any deployment target. For web, mobile web, native mobile and native desktop.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="carousel-item carousel-item-next carousel-item-left">
-        <my-img></my-img>
-        <!--<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect fill="#777" width="100%" height="100%"></rect></svg>-->
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Python</h1>
-            <p>Whether you're new to programming or an experienced developer, it's easy to learn and use Python.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-          </div>
-        </div>
-      </div>
-
-      
-      <div class="carousel-item">
-        <my-img></my-img>
-        <!--<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect fill="#777" width="100%" height="100%"></rect></svg>-->
-        <div class="container">
-          <div class="carousel-caption text-right">
-            <h1>Machine Learning</h1>
-            <p>Putting machine learning in the hands of every developer</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+    
+        <div class="carousel-inner">
+            <ng-container *ngFor="let img of ImagesList; let idx2=index">
+            <div class="carousel-item"  [class.active]="currentIndex==idx2">
+                <img src="/assets/Images/banner/{{img}}" class="d-block w-100">
+              </div>
+            </ng-container>
+            </div>
+   
+ 
+    
+    <a class="carousel-control-prev" (click)="prevSlide()">
       <div class="circle prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="carousel-control-prev-icon"></span>
         <span class="sr-only">Previous</span>
       </div>
     </a>
-    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+    <a class="carousel-control-next">
       <div class="circle next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="carousel-control-next-icon" (click)="nextSlide()"></span>
         <span class="sr-only">Next</span>
       </div>
     </a>
