updated code on 02102019

--- a/src/app/Trainings/datascience/datascience.component.html
+++ b/src/app/Trainings/datascience/datascience.component.html
@@ -9,17 +9,18 @@
   <div class="row">
       <div class="col-sm-1 col-md-1 col-lg-4 col-xl-4 divsdata"> 
           <img [src]="introduct"/>
-            <a class="coursetitle">Introduction to data sciences </a>
+            <a class="coursetitle" routerLink='/trainings/datascience/introduction'>Introduction to data sciences</a>
        </div>
       
       <div class="col-sm-1 col-md-1 col-lg-4 col-xl-4 divsdata">
         <img [src]="dsstatistics" class="statistics"/>
-          Statistics
+        <a class="coursetitle" routerLink='/trainings/datascience/statistics'>  Statistics</a>
+        
         </div>
 
         <div class="col-sm-1 col-md-1 col-lg-4 col-xl-4 divsdata">
             <img [src]="dsimplementation" class="implementation"/>
-            <a class="coursetitle">  Understanding and implementing </a>
+            <a class="coursetitle" routerLink='/trainings/datascience/understandandImplement'>  Understanding and implementing </a>
         </div>
   </div>
 </div>
@@ -27,17 +28,17 @@
   <div class="row">
       <div class="col-sm-1 col-md-1 col-lg-4 col-xl-4 divsdata"> 
         <img [src]="dsRprog"/>
-        <a class="coursetitle">  R programming basics </a>
+        <a class="coursetitle"  routerLink='/trainings/datascience/rprogramming'>  R programming basics </a>
       </div>
 
       <div class="col-sm-1 col-md-1 col-lg-4 col-xl-4 divsdata">
         <img [src]="python"/>
-        <a class="coursetitle">  Python for data science </a>
+        <a class="coursetitle"  routerLink='/trainings/datascience/python'>  Python for data science </a>
         </div>
 
         <div class="col-sm-1 col-md-1 col-lg-4 col-xl-4 divsdata">
             <img [src]="deepLearning"/>
-            <a class="coursetitle">   Deep Learning </a>
+            <a class="coursetitle"  routerLink='/trainings/datascience/deepLearning'>   Deep Learning </a>
           </div>
 </div>
 </div>
