--- a/src/app/Trainings/datascience/deeplearning/deeplearning.component.html
+++ b/src/app/Trainings/datascience/deeplearning/deeplearning.component.html
@@ -8,7 +8,7 @@
 <div class="container-fluid whyds ">
 <div class="row">
         <div class="col-sm-1 col-md-1 col-lg-6 col-xl-6 whydsparagraph"> 
-            <p class="ds"><b>Why  Data Science</b>
+            <p class="ds"><b>Deep Learning</b>
                 The term Data Science has emerged recently with the evolution of mathematical statistics and data analysis. The journey has been amazing, we have accomplished so much today in the field of Data Science.
                 
                 In the next few years, we will be able to predict the future as claimed by researchers from MIT. They already have reached a milestone in predicting the future, with their awesome research. They can now predict what will happen in the next scene of a movie, with their machine! How? Well it might be a little complex for you to understand as of now, but don’t worry by the end of this blog, you shall have an answer to that as well.
@@ -18,8 +18,8 @@
         </div>
 
         <div class="col-sm-1 col-md-1 col-lg-6 col-xl-6 videos"> 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/KxryzSO1Fjs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>What is Data Science? | Introduction to Data Science | Data Science for Beginners | Tweak Talent </p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/7x2YZhEj9Dw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p>Deep Learning Tutorial with Python | Machine Learning with Neural Networks  | Tweak Talent </p>
           </div>
      
 </div>
@@ -27,7 +27,7 @@
 <div class="container-fluid">
         <div class="row">
                 <div class="col-sm-1 col-md-1 col-lg-6 col-xl-6 whydsparagraph"> 
-                        <b>What is Data Science?</b>
+                        <b>Python for Deep Learning</b>
                         It is a type of Artificial Intelligence that makes the computers capable of learning on their own i.e without explicitly being programmed. With machine learning, machines can update their own code, whenever they come across a new situation. 
                         
                         Concluding in this Data Science Tutorial, we now know Data Science is backed by Machine Learning and its algorithms for its analysis. How we do the analysis, where do we do it. Data Science further has some components which aids us in addressing all these questions.
@@ -40,8 +40,8 @@
                         Easy ain’t it? Let me throw one more question at you then in this Data Science Tutorial! Which algorithm of Machine Learning they must have implemented in this?
                 </div>
                 <div class="col-sm-1 col-md-1 col-lg-6 col-xl-6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/S-T2-ir6TPA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                       <p> What Is Data Science? Data Science Course - Data Science Tutorial For Beginners| Tweak Talent</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/yX8KuPZCAMo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                       <p>TensorFlow Tutorial | Deep Learning Using TensorFlow | TensorFlow Tutorial Python |  Tweak Talent</p>
                     </div>
         </div>
 </div>
